# bestgres

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
dev/: docker-compose.yml
dev/init1/: 01-schema.sql  02-seed.sql
dev/init2/: 01-schema.sql  02-seed.sql
src/: App.tsx  globals.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: connection.rs  history.rs  mod.rs  query.rs
src-tauri/src/db/: postgres.rs
src/components/: ConnectionDialog.tsx  DataGrid.tsx  EditableCell.tsx  QueryEditor.tsx  Sidebar.tsx  SqlEditor.tsx  TabManager.tsx  TableBrowser.tsx  TableStructureView.tsx  Toast.tsx
src/hooks/: use-invoke.ts  use-theme.ts
