[package]
name = "bestgres"
version = "0.1.0"
description = "Minimalist Postgres Explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "bestgres_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
thiserror = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

